@@ -19,7 +19,7 @@
 // File: admin.php
 
 require_once './common.php';
-include './config/admin_config.php';
+require_once './config/admin_config.php';
 
 // Database driven language entries
 $langvars = Bnt\Translate::load($pdo_db, $lang, array('admin', 'common',
@@ -103,7 +103,7 @@ $variables['button_main'] = $button_main;
 //$langvars['container'] = "langvar";
 
 // Pull in footer variables from footer_t.php
-include './footer_t.php';
+require_once './footer_t.php';
 $langvars = Bnt\Translate::load($pdo_db, $lang, array('admin', 'common',
                                 'global_includes', 'global_funcs', 'combat',
                                 'footer', 'news', 'report', 'main', 'zoneedit',
