@@ -31,7 +31,7 @@ class Footer
         $langvars['container'] = 'langvars';
 
         // Pull in footer variables from footer_t.php
-        include './footer_t.php';
+        require_once './footer_t.php';
         $template->addVariables('langvars', $langvars);
         $template->addVariables('variables', $variables);
         $template->display('footer.tpl');
