@@ -62,7 +62,7 @@ $variables['container'] = 'variable';
 $langvars['container'] = 'langvars';
 
 // Pull in footer variables from footer_t.php
-include './footer_t.php';
+require_once './footer_t.php';
 $template->addVariables('langvars', $langvars);
 $template->addVariables('variables', $variables);
 $template->display('index.tpl');
