@@ -118,7 +118,7 @@ $variables['container'] = "variable";
 $langvars['container'] = "langvar";
 
 // Pull in footer variables from footer_t.php
-include './footer_t.php';
+require_once './footer_t.php';
 $langvars = Bnt\Translate::load($pdo_db, $lang, array('main', 'report', 'device', 'common', 'global_includes', 'global_funcs', 'footer', 'regional', 'news'));
 $template->addVariables('langvars', $langvars);
 $template->addVariables('variables', $variables);
