@@ -19,7 +19,7 @@
 // Todo: Change the table creation for Xenobes to use the new XML schema files
 
 require_once './common.php';
-include './config/admin_config.php';
+require_once './config/admin_config.php';
 
 $title = $langvars['l_ai_control'];
 Bnt\Header::display($pdo_db, $lang, $template, $title);
